--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "next": "^14.2.14",
     "next-auth": "^4.24.8",
